--- a/economy.html
+++ b/economy.html
@@ -143,6 +143,9 @@
                 <tr><td>Soap, candle, or thread (each)</td><td>2–5 copper</td><td>Everyday supplies</td></tr>
                 <tr><td>Sack of potatoes, apples, etc.</td><td>10–15 copper</td><td>Enough for several meals</td></tr>
                 <tr><td>Wineskin or waterskin (empty)</td><td>8–12 copper</td><td>Reusable container</td></tr>
+                <tr><td>Exotic spices, silks, or imported tea</td><td>2–10 silver</td><td>Rare and foreign goods</td></tr>
+                <tr><td>Food rations (1 week)</td><td>1–3 silver</td><td>Preserved for travel</td></tr>
+                <tr><td>Alchemical components (vial, flask, reagents)</td><td>10–30 copper</td><td>Minor crafting and potion use</td></tr>
             </table>
 
             <h3>Wages & Common Jobs</h3>
@@ -154,6 +157,9 @@
                 <tr><td>Hunter / Trapper</td><td>5–8 silver per week</td><td>Or per pelt/bundle of meat</td></tr>
                 <tr><td>Scribe / Clerk</td><td>6–10 silver per week</td><td>Literacy-based trade</td></tr>
                 <tr><td>Mercenary (base rate)</td><td>1–2 silver per day</td><td>Scales with risk and experience</td></tr>
+                <tr><td>Blacksmith apprentice</td><td>4–6 silver per week</td><td>Includes basic material access</td></tr>
+                <tr><td>Courier / Message-runner</td><td>1–3 silver per job</td><td>Fast and discreet transport</td></tr>
+                <tr><td>Healer’s assistant</td><td>3–5 silver per week</td><td>Help with herbs and patient care</td></tr>
             </table>
 
             <h3>Healing & Magical Services</h3>
@@ -164,6 +170,10 @@
                 <tr><td>Priest healing (minor)</td><td>10–20 silver</td><td>Cuts, bruises, infection</td></tr>
                 <tr><td>Priest healing (serious)</td><td>1–2 gold</td><td>Broken bones, disease</td></tr>
                 <tr><td>Blessing on weapon/item</td><td>50 silver – 1 gold</td><td>Short-term divine enchantment</td></tr>
+                <tr><td>Curse removal / Exorcism</td><td>2–5 gold</td><td>Ritual cleansing of affliction</td></tr>
+                <tr><td>Object identification (magical)</td><td>1–2 silver</td><td>Basic arcane scan or appraisal</td></tr>
+                <tr><td>Anti-possession charms or wards</td><td>50 silver – 1 gold</td><td>Protection against dark magic</td></tr>
+                <tr><td>Emergency rites / resurrection attempts</td><td>5–10 gold</td><td>Rare and taxing ritual</td></tr>
             </table>
 
             <h3>Games, Gambling & Entertainment</h3>
@@ -174,26 +184,46 @@
                 <tr><td>Wagers / bar bets</td><td>Varies</td><td>Usually 1–10 copper unless serious</td></tr>
                 <tr><td>Bard performance</td><td>5–20 copper (tip)</td><td>Generosity varies by audience</td></tr>
                 <tr><td>Hiring a bard/dancer</td><td>20–50 copper</td><td>Per evening or event</td></tr>
+                <tr><td>Tavern games/tournaments</td><td>1 silver buy-in</td><td>Knife throwing, arm wrestling</td></tr>
+                <tr><td>Underground pit fight entry</td><td>5–10 silver</td><td>Illegal or high-stakes arenas</td></tr>
+                <tr><td>Magic dueling (non-lethal)</td><td>1–2 gold</td><td>Spellcasters only, formal</td></tr>
+                <tr><td>Hire acting troupe</td><td>1–3 gold</td><td>Evening of immersive entertainment</td></tr>
             </table>
 
             <h3>Housing & Property</h3>
+            <div class="note">
+                <p>
+                    <b>Note:</b> Some listings represent <i>monthly rental rates</i>, while others are one-time <i>purchase costs</i>. Upkeep refers to ongoing maintenance or tax obligations and should be discussed with phase staff or guild leaders as appropriate.
+                </p>
+            </div>
             <table>
-                <tr><th>Type</th><th>Cost (per month)</th><th>Notes</th></tr>
-                <tr><td>Shared room at inn</td><td>40–60 copper</td><td>Cheap, noisy, includes food</td></tr>
-                <tr><td>Private room at inn</td><td>1–2 silver</td><td>Basic privacy and warmth</td></tr>
-                <tr><td>Small cottage (rented)</td><td>3–5 silver</td><td>Modest rural home</td></tr>
-                <tr><td>Townhouse (rented)</td><td>8–15 silver</td><td>Comfortable, near amenities</td></tr>
-                <tr><td>Manor estate (noble)</td><td>1–5 gold</td><td>Servants, stables, land</td></tr>
+                <tr><th>Type</th><th>Cost</th><th>Notes</th></tr>
+                <tr><td>Shared room at inn</td><td>40–60 copper / month</td><td>Cheap, noisy, includes food</td></tr>
+                <tr><td>Private room at inn</td><td>1–2 silver / month</td><td>Basic privacy and warmth</td></tr>
+                <tr><td>Small cottage (rented)</td><td>3–5 silver / month</td><td>Modest rural home</td></tr>
+                <tr><td>Townhouse (rented)</td><td>8–15 silver / month</td><td>Comfortable, near amenities</td></tr>
+                <tr><td>Manor estate (rented)</td><td>1–5 gold / month</td><td>Servants, stables, land</td></tr>
+                <tr><td>Buy rural shack</td><td>10–20 gold (one-time)</td><td>May need repairs, no upkeep unless noted</td></tr>
+                <tr><td>Buy townhouse (urban)</td><td>100+ gold (one-time)</td><td>City dwelling, high status</td></tr>
+                <tr><td>Estate tax/upkeep</td><td>5–10% of value / month</td><td>Applies to owned noble properties</td></tr>
+                <tr><td>Hire cook/housekeeper</td><td>4–5 silver / week</td><td>Each role hired separately</td></tr>
+                <tr><td>Guildhall upkeep (shared)</td><td>15–25 silver / month</td><td>Depends on size and location</td></tr>
+                <tr><td>Fortified homestead upkeep</td><td>1–2 gold / month</td><td>Includes basic guard pay</td></tr>
             </table>
             <div class="note">
                 <p>
-                    <b>Note:</b> All prices reflect in-character roleplay values, not game mechanics. Adjust as needed for your phase setting.
+                    <b>Tip:</b> For guilds or persistent phases, negotiate ownership and taxes with DMs or admins.
                 </p>
             </div>
             <div class="fancy-divider">
                 <span class="line left"></span>
                 <span class="diamond"></span>
                 <span class="line right"></span>
+            </div>
+            <div class="note">
+                <p>
+                    <b>Note:</b> All prices reflect in-character roleplay values, not game mechanics. Adjust as needed for your phase setting.
+                </p>
             </div>
         </section>
     </main>
