--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <ul class="dropdown">
                         <li><a href="custom-items.html">CUSTOM BOOKS</a></li>
                         <li><a href="economy.html">ECONOMY GUIDE</a></li>
+                        <li><a href="contracts.html">IC CONTRACT TEMPLATES</a></li>
                         <li><a href="guides.html">TRP 3 GUIDES</a></li>
                     </ul>
                 </li>
@@ -53,3 +54,4 @@
 
 </body>
 </html>
+
