--- a/custom-items.html
+++ b/custom-items.html
@@ -11,7 +11,9 @@
 
     <!-- Header with Navigation -->
     <header>
-        <h1>THE VAULT OF ENDURIEL</h1>
+        <div class="logo">
+            <img src="images/logo.png" alt="The Vault of Enduriel" class="site-logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -376,4 +378,5 @@
     </script>
 </body>
 </html>
+
 
