--- a/contracts.html
+++ b/contracts.html
@@ -11,7 +11,9 @@
 
     <!-- Header with Navigation -->
     <header>
-        <h1>THE VAULT OF ENDURIEL</h1>
+        <div class="logo">
+            <img src="images/logo.png" alt="The Vault of Enduriel" class="site-logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -181,4 +183,5 @@ Signed in the presence of [Witness or Authority].
     </footer>
 
 </body>
+
 </html>
