--- a/guides.html
+++ b/guides.html
@@ -11,7 +11,9 @@
 
     <!-- Header with Navigation -->
     <header>
-        <h1>THE VAULT OF ENDURIEL</h1>
+        <div class="logo">
+            <img src="images/logo.png" alt="The Vault of Enduriel" class="site-logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -168,4 +170,5 @@
 
 </body>
 </html>
+
 
