--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section>
             <p>
                 Welcome to my personal website, a space where I share my worldbuilding and roleplaying projects. 
-                Here, you'll find a variety of resources designed to inspire and support your own creative endeavors. 
+                Here, you'll also find a variety of resources designed to inspire and support your own creative endeavors. 
                 <br><br>
                 Feel free to draw inspiration from my work, as it’s the very same process that has fueled my own creations.
                 <br><br>
@@ -54,6 +54,7 @@
 
 </body>
 </html>
+
 
 
 
