--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                 scrolling through social media, so let's dive in and start creating!
                 <br><br>
                 As time goes on, this vault will grow and I will add a lot more content.
+                <br><br>
+                <h3>Regarding the World of Warcraft Lore on this Site:</h3>
+                <p>My projects play with custom lore, but always with the goal of staying true to Warcraft’s established setting. I don’t seek to rewrite major stories or alter canon events—instead, I try to fill in the blanks that Blizzard often leaves open. That means adding detail to the small, everyday parts of Azeroth: how reagents and enchantments are applied, how a shipping company might realistically operate with wages and employees, or what kind of cuisine is served in different regions. These additions are meant to expand immersion and provide roleplayers with more tools, not to replace the game’s canon.</p>
             </p>
         </section>
     </main>
@@ -54,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
