--- a/index.html
+++ b/index.html
@@ -44,7 +44,22 @@
                 <br><br>
                 As time goes on, this vault will grow and I will add a lot more content.
                 <br><br>
-                <h3>Regarding the World of Warcraft Lore on this Site:</h3>
+                <div class="decorated-h1">
+                    <div class="flourish-left">
+                        <span class="flourish-line-left"></span>
+                        <span class="flourish-box"></span>
+                    </div>
+                        <h3>Regarding the World of Warcraft Lore on this Site</h3>
+                    <div class="flourish-right">
+                        <span class="flourish-box"></span>
+                        <span class="flourish-line-right"></span>
+                    </div>
+                </div>
+                <div class="fancy-divider">
+                    <span class="line left"></span>
+                    <span class="diamond"></span>
+                    <span class="line right"></span>
+                </div>
                 My projects play with custom lore, but always with the goal of staying true to Warcraft’s established setting. I don’t seek to rewrite major stories or alter canon events—instead, I try to fill in the blanks that Blizzard often leaves open.
                 <br><br>
                 That means adding detail to the small, everyday parts of Azeroth: how reagents and enchantments are applied, how a shipping company might realistically operate with wages and employees, or what kind of cuisine is served in different regions. 
@@ -61,6 +76,7 @@
 
 </body>
 </html>
+
 
 
 
