--- a/armorial.html
+++ b/armorial.html
@@ -10,43 +10,12 @@
 </head>
 <body>
 
-    <!-- Header with Navigation -->
-    <header>
-        <div class="logo">
-            <img src="images/logo.png" alt="The Vault of Enduriel" class="site-logo">
-        </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li class="mega">
-                <a href="#">WORLD OF WARCRAFT RP</a>
-                <div class="mega-menu" role="menu" aria-label="WoW RP Mega Menu">
-                    <div class="mega-col">
-                    <h4>Character & Writing</h4>
-                    <a href="scriptorium.html">The Scriptorium</a>
-                    <a href="trp-guides.html">TRP 3 Customization Guide</a>
-                    <a href="contracts.html">Contract & Agreement Templates</a>
-                    </div>
-
-                    <div class="mega-col">
-                    <h4>Worldbuilding</h4>
-                    <a href="economy.html">Economy Guide</a>
-                    <a href="wip.html">Magical Reagents & Material Index</a>
-                    <a href="wip.html">Curses, Afflictions & Diseases</a>
-                    <a href="armorial.html">Aldenwall: Eastern Kingdoms Armorial Ledger</a>
-                    </div>
-
-                    <div class="mega-col">
-                    <h4>Magic</h4>
-                    <a href="wip.html">The Spellbook</a>
-                    </div>
-                </div>
-                </li>
-                <li><a href="music.html">MUSIC</a></li>
-            </ul>
-        </nav>
-    </header>
-
+    <div id="nav-placeholder"></div>
+    <script>
+    fetch("nav.html")
+        .then(response => response.text())
+        .then(data => document.getElementById("nav-placeholder").innerHTML = data);
+    </script>
 <main>
   <section>
     <div class="decorated-h1">
@@ -54,6 +23,7 @@
       <h1>ARMORIAL LEDGER</h1>
       <div class="flourish-right"><span class="flourish-box"></span><span class="flourish-line-right"></span></div>
     </div>
+    <p><b>On PC:</b> Zoom in and out with your mouse wheel, use left click to drag the image. <b>On Mobile:</b> ... just use your hands.</p>
 
     <div class="fancy-divider">
       <span class="line left"></span><span class="diamond"></span><span class="line right"></span>
@@ -135,4 +105,3 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
-
