--- a/chronicles.html
+++ b/chronicles.html
@@ -20,6 +20,17 @@
 
   <!-- Main Chronicle content -->
   <main>
+            <div class="decorated-h1">
+                <div class="flourish-left">
+                    <span class="flourish-line-left"></span>
+                    <span class="flourish-box"></span>
+                </div>
+                    <h1>CHRONICLES</h1>
+                <div class="flourish-right">
+                    <span class="flourish-box"></span>
+                    <span class="flourish-line-right"></span>
+                </div>
+            </div>
             <p class="page-desc">
                 <i>
                     « Chronicles is a personal project set in our own world during the 14th and 15th centuries — a stage for stories about different characters. Each story is written in the form of a medieval account: a chronicle, a letter, or a witness testimony, told through the eyes of those who lived it. »
@@ -100,4 +111,3 @@
 
 </body>
 </html>
-
