--- a/chronicles.html
+++ b/chronicles.html
@@ -93,10 +93,40 @@
       <article id="folio2" class="folio-entry">
         <h3>◈ Folio II — The Names at the Fire</h3>
         <div class="folio-meta">
-          <p><i>Work in progress...</i></p>
+          <p><i>From the writings of Brother Jan of Vyšehrad, winter 1403</i></p>
         </div>
         <div class="folio-text">
-          <!-- Paste your Folio II text here -->
+        <p>The rain eased toward midnight. We found shelter beneath what was left of a mill, its wheel broken and sunk in the mud. Marek struck flint while I gathered roots and bark dry enough to burn. She said nothing, only held her hands out when the flame caught, as if the light were an old acquaintance.</p>
+        <p><i>“Got a name?”</i> Marek asked once the fire steadied.</p>
+        <p><i>“Izolda.”</i> She spoke it plainly, as though testing whether we would believe her.</p>
+        <p><i>“A noble name for the road,”</i> I said.</p>
+        <p><i>“It was given to me by someone who thought I was better than I am,”</i> she answered.</p>
+        <p>I noticed the mark at her throat again and decided to ask what it was.</p>
+        <p>She touched it lightly, as if surprised to find it still there. <i>“A reminder to breathe,”</i> she said, and left it at that.</p>
+        <p>I was not sure what to make of it, but decided not to press further.</p>
+        <p>Marek raised an eyebrow and studied her for a moment. <i>“Looks more like the mark of someone who escaped a sentence,”</i> he said.</p>
+        <p><i>“We’ve no right to question it,”</i> I told him. <i>“We’re marked men ourselves.”</i></p>
+        <p>He only shrugged. From his look I guessed he agreed and was content to let the matter rest. He then poured wine into three dented cups. She took hers but did not drink.</p>
+        <p><i>“If you’ve travelled long enough,”</i> I told her, <i>“you learn to bless the taste of anything that isn’t rain.”</i></p>
+        <p><i>“And if you’ve travelled longer?”</i> she asked.</p>
+        <p><i>“Then you drink to forget.”</i></p>
+        <p>Marek raised his cup. <i>“To forgetting, then.”</i></p>
+        <p>She smiled faintly.</p>
+        <p>The fire hissed and threw its light across her face. She watched the sparks drift upward as if counting them, then whispered, <i>“They look like souls that forgot which way was heaven.”</i></p>
+        <p>Marek handed me the wineskin. <i>“Your kind of sermon, Brother.”</i></p>
+        <p><i>“I’ve heard worse in Prague,”</i> I said.</p>
+        <p>She laughed quietly, the sound low and clean, as if cut from glass. <i>“Then write it down. Write us saints, Brother.”</i></p>
+        <p>Marek grunted. <i>“Saints don’t drink.”</i></p>
+        <p><i>“Then write us thirsty ones.”</i></p>
+        <p>I laughed again before I meant to. It’s easier to believe in God when she talks of Him like that.</p>
+        <p>She watched me for a while, the faintest smile still on her lips. <i>“And what about you two?”</i> she asked. <i>“You ask names but give none.”</i></p>
+        <p><i>“Jan,”</i> I said. <i>“Last I fought the Turks at Nicopolis. Barely escaped.”</i> I touched the old wound at my leg; the cold makes it ache. <i>“Now I’m bound for Prague. I’d sooner fight with ink than steel, if the city still has room for another scholar.”</i></p>
+        <p>Marek tipped his cup toward her. <i>“Marek. I fought for Wenceslaus — until his brother came for his crown and left us in the mud. A man can still sell his sword in the city, if he’s not too proud.”</i></p>
+        <p>She nodded as if the answers pleased her.</p>
+        <p>For a while no one spoke. Marek cleaned his sword in silence; I sharpened my quill. She kept counting the sparks, her lips moving softly, her long brown hair falling forward to frame her face. There was a stillness about her that drew the eye and unsettled the heart. She was hauntingly beautiful.</p>
+        <p>Then she began to hum — a slow, fragile tune that carried just above the crackle of the fire. It might have been a lullaby once. The melody and words were foreign to my ear; I thought it German, though I could not place it. At first Marek watched her warily, hand resting on his sword belt, but as the tune went on his shoulders eased. By the end he was leaning back against his pack, eyes half closed, as if the sound had stolen the weight from him. </p>
+        <p>The fire sank low, and the humming faded with it. I think that was the first night I wrote her name.</p>
+
         </div>
         <div class="folio-footer">
           <a href="#folio1">← Back to Folio I</a>
