--- a/chronicles.html
+++ b/chronicles.html
@@ -50,16 +50,17 @@
       <nav class="folio-nav">
         <a href="#folio1">Folio I</a>
         <a href="#folio2">Folio II</a>
+        <a href="#folio3">Folio III</a>
       </nav>
 
       <article id="folio1" class="folio-entry">
-        <h3>◈ Folio I — The Woman by the Road</h3>
+        <h3>◇ Folio I — The Woman by the Road</h3>
         <div class="folio-meta">
           <p><i>From the writings of Brother Jan of Vyšehrad, winter 1403</i></p>
         </div>
         <div class="folio-text">
             <p>
-                We found her on the corpse-road south of Vysoké Pole, among the fallen from yesterday’s skirmish. The rain was fine as thread and turned the mud to wine around them. The air was thick with the stench of wet iron and trampled earth—blood turning sweet as it cooled.
+                We found her on the corpse-road south of Olomouc, among the fallen from yesterday’s skirmish. The rain was fine as thread and turned the mud to wine around them. The air was thick with the stench of wet iron and trampled earth—blood turning sweet as it cooled.
             </p>
             <p>
                 She sat on the broken axle of a cart, cleaning a fallen soldier’s hand, finger by finger, as though he might wake and thank her. The man’s eyes were open to the rain. She closed them when she was done.
@@ -71,6 +72,7 @@
             <p>Marek frowned. <i>“Both rot the same in mud.”</i></p>
             <p><i>“Then you’re honest,”</i> she said, and rose. <i>“Where are you headed?”</i></p>
             <p><i>“Prague,”</i> Marek answered. <i>“If the road still leads there.”</i></p>
+            <p><i>“Every road leads somewhere,”</i>she said.</p>
             <p>Marek’s hand tightened on his sword belt. <i>“Where does yours lead?”</i></p>
             <p>She smiled, not as one who had been caught in a question, but as though she’d heard a riddle answered. <i>“I suppose I’ll find out when you do.”</i></p>
             <p><i>"We’ve no room for strays,"</i> Marek said, and turned down the road. The air felt heavier for it. I cannot explain why, but it seemed a curse to leave her sitting there amid the fallen, a single living figure in the ruin. Perhaps I feared that if we left her, some part of us would stay behind to keep her company.</p>
@@ -91,7 +93,7 @@
       </article>
 
       <article id="folio2" class="folio-entry">
-        <h3>◈ Folio II — The Names at the Fire</h3>
+        <h3>◇ Folio II — The Names at the Fire</h3>
         <div class="folio-meta">
           <p><i>From the writings of Brother Jan of Vyšehrad, winter 1403</i></p>
         </div>
@@ -130,6 +132,20 @@
         </div>
         <div class="folio-footer">
           <a href="#folio1">← Back to Folio I</a>
+          <a href="#folio3">Continue to Folio III →</a>
+        </div>
+      </article>
+      <article id="folio2" class="folio-entry">
+        <h3>◇ Folio III — </h3>
+        <div class="folio-meta">
+          <p><i>Work in Progress ...</i></p>
+        </div>
+        <div class="folio-text">
+        <p></p>
+
+        </div>
+        <div class="folio-footer">
+          <a href="#folio2">← Back to Folio II</a>
         </div>
       </article>
     </section>
