--- a/chronicles.html
+++ b/chronicles.html
@@ -51,6 +51,8 @@
         <a href="#folio1">Folio I</a>
         <a href="#folio2">Folio II</a>
         <a href="#folio3">Folio III</a>
+        <a href="#folio4">Folio IV</a>
+        <a href="#folio5">Folio V</a>
       </nav>
 
       <article id="folio1" class="folio-entry">
@@ -88,7 +90,6 @@
             <p>I think it would still have been a curse to leave her.</p>
         </div>
         <div class="folio-footer">
-          <a href="#folio2">Continue to Folio II →</a>
         </div>
       </article>
 
@@ -131,21 +132,125 @@
 
         </div>
         <div class="folio-footer">
-          <a href="#folio1">← Back to Folio I</a>
-          <a href="#folio3">Continue to Folio III →</a>
         </div>
       </article>
-      <article id="folio2" class="folio-entry">
-        <h3>◇ Folio III — </h3>
+      <article id="folio3" class="folio-entry">
+        <h3>◇ Folio III — The Road through Haná</h3>
         <div class="folio-meta">
-          <p><i>Work in Progress ...</i></p>
+          <p><i>From the writings of Brother Jan of Vyšehrad, winter 1403</i></p>
         </div>
         <div class="folio-text">
-        <p></p>
-
+          <p>
+            Dawn came pale and brittle. The fire had gone out sometime before first light, and the air stung with frost. We walked south, following the trade road toward Brno. The land here was good once — black soil, low hills, birch and alder — but the fields were bare, the huts half–burned. Smoke still hung in the hollows.
+          </p>
+          <p>
+            Near noon we passed a woman drawing water from a well. She crossed herself when she saw us, but her eyes lingered on Izolda. She whispered something, but it was inaudible. Izolda only smiled, and the woman dropped her bucket and fled inside.
+          </p>
+          <p>
+            <i>“They think every stray is a spirit these days,”</i> Marek muttered. <i>“Too many dead to tell the difference.”</i>
+          </p>
+          <p>
+            <i>“Perhaps they’re right,”</i> I said, though I meant it kindly.
+          </p>
+          <p>
+            We ate by the roadside, bread gone hard, wine gone thin. Izolda sat apart, watching the crows move in the furrows. She hummed again, the same tune as the night before. In daylight it sounded smaller, almost human. A farmer’s child stopped his cart to listen, then crossed himself twice before driving on.
+          </p>
+          <p>
+            I caught myself watching her then — the way the cold seemed to forget her skin, the way her hair caught the light though the day was gray. It shamed me, that impulse. Not desire, but something older: the ache of seeing grace in a place that had none. Perhaps that is the sin of men like me — to seek God’s reflection in what is only human.
+          </p>
+          <p>
+            By evening the road bent through a stretch of birchwood. My leg ached from the old wound. She walked between us, light as wind over snow. When I asked if she was cold, she said she had been colder once, but could not remember when.
+          </p>
+          <p>
+            That night we reached an abandoned chapel on a hill. The roof was gone but the altar still stood, slick with moss and rain. She laid her hands upon it as though greeting an old friend. Marek swore softly and went to make camp outside. I stayed a moment longer. The light through the broken roof fell across her hair like a benediction, and for an instant — I swear it — I thought the ruin breathed.
+          </p>
         </div>
         <div class="folio-footer">
-          <a href="#folio2">← Back to Folio II</a>
+        </div>
+      </article>
+      <article id="folio4" class="folio-entry">
+        <h3>◇ Folio IV — The Road of the Dead</h3>
+        <div class="folio-meta">
+          <p><i>From the writings of Brother Jan of Vyšehrad, winter 1403</i></p>
+        </div>
+        <div class="folio-text">
+        <p>
+          The road south was full of the dead. We met them before noon — bodies heaped on a wagon, two peasants driving the oxen through the slush. They said a skirmish had passed three days prior; they were carting what was left to the fields beyond the river.
+        </p>
+        <p>
+          Izolda went to them without a word. She helped lift the fallen, closed eyes, untangled limbs. I told her not to touch them, but she did not listen. Her hands moved with a care I had forgotten belonged to the living. Marek watched, expressionless, until one of the men crossed himself and muttered that she should be left alone with them.
+        </p>
+        <p>
+          When we walked again, the crows followed. She smelled of smoke and rain.
+        </p>
+        <p>
+          <i>“You give too much to the dead,”</i> I told her.
+        </p>
+        <p>
+          <i>“They’re easier to help,”</i> she said.
+        </p>
+        <p>
+          By dusk we reached a village crouched around a small green, its wells boarded, its church leaning like a drunk. Smoke rose from a few chimneys but no sound came from the yards. The people watched from behind fences, eyes hollow with suspicion.
+        </p>
+        <p>
+          A priest came out first — old, thin, with his stole worn to threads. <i>“You bring her here?”</i> he shouted. <i>“Back from the gallows? God have mercy, you bring her here again?”</i>
+        </p>
+        <p>
+          <i>“We’ve never been here,”</i> Marek said, his hand resting on the hilt of his longsword.
+        </p>
+        <p>
+          <i>“She has,”</i> the priest spat. <i>“I saw her hang with my own eyes. Witch, consorter, blasphemer. Look! The mark still shows.”</i>
+        </p>
+        <p>
+          Izolda stood calm as stone. <i>“If you hung me,”</i> she said, <i>“you did it badly.”</i>
+        </p>
+        <p>
+          The crowd stirred; a stone struck the mud at her feet. Another man came forward with a hoe. Marek moved between them.
+        </p>
+        <p>
+          <i>“Back off,”</i> he warned. <i>“You’ll find no miracle worth dying for.”</i>
+        </p>
+        <p>
+          The priest raised his cross, shouting a prayer that cracked his voice. Then the men rushed.
+        </p>
+        <p>
+          Marek’s blade moved first — one clean stroke, another, the sound of iron through cloth. No wasted motion, only the solid rhythm of a trained man. I joined him without thinking; the hammer swung of its own memory. The spike found a chest, the flat caught a jaw. It was over in heartbeats. I remembered the weight, the recoil, the sudden quiet that always follows.
+        </p>
+        <p>
+          One villager lay in the dirt, chest split open like wet bark. The rest fell back, dragging the priest with them, the women screaming from the doorways.
+        </p>
+        <p>
+          Marek wiped his sword on his red surcoat. <i>“Idiots,”</i> he said. <i>“They came at steel with farm tools.”</i>
+        </p>
+        <p>
+          <i>“They thought they were defending God,”</i> I said.
+        </p>
+        <p>
+          <i>“Then He armed them poorly,”</i> Marek grunted.
+        </p>
+        <p>
+          We left before they could find courage again. The sun was gone, and the road glimmered with frost. None of us spoke until the village lights had vanished behind the trees.
+        </p>
+        <p>
+          We made camp by the river. The fire smoked but held. Marek sat sharpening his blade; I cleaned the hammer’s face and spike. Izolda watched us both as if weighing which of us was more dangerous.
+        </p>
+        <p>
+          <i>“A waste of men,”</i> Marek said. <i>“But better them than us.”</i>
+        </p>
+        <p>
+          <i>“Every road has its toll,”</i> I answered.
+        </p>
+        <p>
+          Izolda looked into the flame. <i>“And some pay twice.”</i>
+        </p>
+        <p>
+          None of us spoke for a long while. The fire crackled, the river whispered beyond the dark. Then, so softly I almost thought I imagined it, she said, <i>“Thank you.”</i>
+        </p>
+        <p>
+          Marek only nodded. I could not. I watched the fire burn low and wondered which of us she meant. The ink thickens in the cold tonight; I write slower than I should.
+        </p>
+        </div>
+        <div class="folio-footer">
         </div>
       </article>
     </section>
@@ -155,6 +260,14 @@
     <p>© 2025 Ege Kazak — All Rights Reserved</p>
   </footer>
 
+<script>
+document.querySelectorAll(".folio-entry h3").forEach(header => {
+  header.addEventListener("click", () => {
+    const entry = header.parentElement;
+    entry.classList.toggle("active");
+  });
+});
+</script>
+
 </body>
 </html>
-
